Tools(feat[swap]): Complete native switcher
why: The private Java utility must cover every supported client and
Claude scope without relying on the retired Python implementation.

what:
- Add exact preflight, cross-port locking, and layered recovery
- Harden eight-client transactions, formats, routes, and cleanup